--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5174",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@appsurify-testmap/rrweb": "^2.1.1-alpha.2",
-    "@appsurify-testmap/rrweb-player": "^2.1.1-alpha.2",
-    "@appsurify-testmap/rrweb-plugin-sequential-id-record": "^2.1.1-alpha.2",
-    "@appsurify-testmap/rrweb-plugin-sequential-id-replay": "^2.1.1-alpha.2",
-    "@appsurify-testmap/rrweb-snapshot": "^2.1.1-alpha.2",
-    "@appsurify-testmap/rrweb-types": "^2.1.1-alpha.2",
+    "@appsurify-testmap/rrweb": "^2.1.1-alpha.5",
+    "@appsurify-testmap/rrweb-player": "^2.1.1-alpha.5",
+    "@appsurify-testmap/rrweb-plugin-sequential-id-record": "^2.1.1-alpha.5",
+    "@appsurify-testmap/rrweb-plugin-sequential-id-replay": "^2.1.1-alpha.5",
+    "@appsurify-testmap/rrweb-snapshot": "^2.1.1-alpha.5",
+    "@appsurify-testmap/rrweb-types": "^2.1.1-alpha.5",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.3.4",
     "react": "^19.1.0",
