Remove pnpm-lock.yaml from the repository.
This commit deletes the pnpm-lock.yaml file, potentially to avoid managing dependencies through a lockfile or due to a transition to another dependency management approach. Ensure to review and update any affected processes.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,7 @@ jobs:
           node-version: lts/*
           cache: 'npm'
       - name: Install dependencies
-        run: pnpm i
+        run: yarn install
       - name: Build
         run: npm run build
       - name: Upload artifact
