--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@appsurify-testmap/rrweb": "^2.1.1-alpha.5",
     "@appsurify-testmap/rrweb-player": "^2.1.1-alpha.5",
-    "@appsurify-testmap/rrweb-plugin-sequential-id-record": "^2.1.1-alpha.5",
-    "@appsurify-testmap/rrweb-plugin-sequential-id-replay": "^2.1.1-alpha.5",
     "@appsurify-testmap/rrweb-snapshot": "^2.1.1-alpha.5",
     "@appsurify-testmap/rrweb-types": "^2.1.1-alpha.5",
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.3.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "framer-motion": "^12.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
